# TinyCProjects

./: .gitignore  README.md
ASimpleGreeting/: CMakeLists.txt  greet02.c  greet04.c  greetings  main.c  pithy03.c  pithy04.c  time01.c
Chapter02-ASimpleGreeting/: CMakeLists.txt  greet03.c  greetings  moon01.c  pithy01.c  pithy02.c  pithy05.c  time02.c
Chapter03-NatoOutput/: CMakeLists.txt  nato01.c  nato02.c  nato03.c  nato04.c  nato05.c
Chapter04-CaesareanCipher/: CMakeLists.txt  allcaps.c  buffering.c  caesar01.c  caesar02.c  caesar03.c  caesar04.c  censored.c  hexFilter01.c  hexFilter02.c  io_filter.c  nato01.c  ransom.c  sarcasm  sarcasm.c  stream_demo.c  wordFilter01.c
Chapter05-EncodingAndDecoding/: CMakeLists.txt  asciiTable01.c  binaryAsciiTable01.c  caseTricks01.c  checkSum01.c  hexDecode01.c  hexDecode02.c  hexDecode03.c  hexDecode04.c  hexDefilter01.c  hexEncode01.c  hexEncode02.c  hexd  hexe  hexenFilter01.c  hexencode  urlDecoder01.c  urlDecoder02.c  urlEncoder01.c
Chapter06-PasswordGenerators/: CMakeLists.txt  brutePass01.c  madLib01.c  madLib02.c  passwords01.c  passwords02.c  passwords03.c  randomPassword01.c  randomPassword02.c  randomPassword03.c  randomPassword04.c  randomWords01.c
Chapter07-StringUtilities/: CMakeLists.txt  empty-null.c  strappend.c  strcaps.c  strcat.c  string_object.c  string_size.c  strinsert.c  strlower.c  strrev.c  strsplit.c  strtabs.c  struct_funct.c  strupper.c  strwords.c  strwords02.c  trimming.c
Chapter07-StringUtilities/lib/: README.md  libsample.c  mystring.c  mystring.h
Chapter08-Unicode/: CMakeLists.txt  code_love.c  cyrillic.c  extended_ascii.c  greek_read01.c  greek_read02.c  greek_write.c  hello_wworld01.c  hello_wworld02.c  locale_function.c  mood.c  morse_code_filter.c  suits.c  wide_hello.c  wide_in.c  wide_in_better.c  wscanf.c  yen01.c  yen02.c
Chapter08-Unicode/Output/: alphabeta.wtxt  cyrillic.wtxt
Chapter09-HexDumper/: CMakeLists.txt  byte_sizes.c  byte_values01.c  byte_values02.c  byte_values03.c  byte_values04.c  byte_values05.c  byte_values06.c  dumpfile  dumpfile01.c  dumpfile02.c  dumpfile03.c  dumpfile04.c  dumpfile05.c  dumpfile06.c  dumpfile07.c  limits.c  options01.c  options02.c  options03.c
Chapter10-DirectoryTree/: CMakeLists.txt  changecwd.c  dirtree01.c  dirtree02.c  dirtree03.c  dirtree04.c  extractor.c  fileinfo01.c  fileinfo02.c  fileinfo03.c  fileinfo04.c  fileinfo05.c  getcwd.c  readdir01.c  readdir02.c  readdir03.c  readdir04.c  subdir01.c  subdir02.c  subdir03.c  subdir04.c  subdir05.c  subdir06.c
Chapter11-FileFinder/: CMakeLists.txt  finddupe01.c  finddupe02.c  finddupe03.c  finddupe04.c  finddupe05.c  findfile01.c  findfile02.c  glob01.c  glob02.c
Chapter12-HolidayDetector/: CMakeLists.txt  easter01.c  gauntlet01.c  gauntlet02.c  getdate01.c  getdate02.c  getdate03.c  getdate04  getdate04.c  isholiday01.c  isholiday02.c  isholiday03.c  isholiday04.c  isholiday05.c  isholiday06.c  isholiday07.c  return01  return01.c  return02.c  return03.c
Chapter13-Calendar/: CMakeLists.txt  ansi01.c  ansi02.c  holiday_year.h  isholiday.c  leapyear01.c  month01.c  month02.c  month03.c  month04.c  thefirst01.c  thefirst02.c  thefirst03.c  timezone01.c  timezone02.c  week01.c  week02.c  week03.c  week04.c  weekday01.c  weekday02.c  weekday03.c  year  year01.c  year02.c  year03.c  year04.c  year05.c  year06.c
Chapter14-LottoPicks/: CMakeLists.txt  lotto01.c  lotto02.c  lotto03.c  lotto04.c  lotto05.c  lotto06.c  lotto07.c  lotto08.c  lotto09.c  odds01.c  odds02.c  odds03.c  odds04.c  random01.c  random02.c  random03.c
Chapter15-TicTacToe/: CMakeLists.txt  ttt01.c  ttt02.c  ttt03.c  ttt04.c  ttt05.c  ttt06.c  ttt07.c
