cmake_minimum_required(VERSION 3.30)
project(Chapter06_PasswordGenerators C)

set(CMAKE_C_STANDARD 23)

add_executable(Chapter06_PasswordGenerators main.c)
add_executable(BrutePass01 brutePass01.c)
add_executable(RandomPassword01 randomPassword01.c)
add_executable(RandomPassword02 randomPassword02.c)
add_executable(RandomPassword03 randomPassword03.c)
add_executable(RandomPassword04 randomPassword04.c)
add_executable(RandomWords01 randomWords01.c)
add_executable(MadLib01 madLib01.c)
add_executable(MadLib02 madLib02.c)
