cmake_minimum_required(VERSION 3.30)
project(Chapter09_HexDumper C)

set(CMAKE_C_STANDARD 23)

add_executable(Chapter09_HexDumper main.c)
add_executable(ByteSizes byte_sizes.c)
add_executable(Limits limits.c)
add_executable(ByteValues01 byte_values01.c)
add_executable(ByteValues02 byte_values02.c)
add_executable(ByteValues03 byte_values03.c)
add_executable(ByteValues04 byte_values04.c)
add_executable(ByteValues05 byte_values05.c)
add_executable(ByteValues06 byte_values06.c)
add_executable(Dumpfile01 dumpfile01.c)
add_executable(Dumpfile02 dumpfile02.c)
add_executable(Dumpfile03 dumpfile03.c)
add_executable(Options01 options01.c)
