cmake_minimum_required(VERSION 3.30)
project(Chapter10_DirectoryTree C)

set(CMAKE_C_STANDARD 23)

add_executable(Chapter10_DirectoryTree main.c)
add_executable(FileInfo01 fileinfo01.c)
add_executable(FileInfo02 fileinfo02.c)
add_executable(FileInfo03 fileinfo03.c)
add_executable(FileInfo04 fileinfo04.c)
