cmake_minimum_required(VERSION 3.30)
project(Chapter10_DirectoryTree C)

set(CMAKE_C_STANDARD 23)

add_executable(Chapter10_DirectoryTree main.c)
add_executable(FileInfo01 fileinfo01.c)
add_executable(FileInfo02 fileinfo02.c)
add_executable(FileInfo03 fileinfo03.c)
add_executable(FileInfo04 fileinfo04.c)
add_executable(FileInfo05 fileinfo05.c)
add_executable(ReadDir01 readdir01.c)
add_executable(ReadDir02 readdir02.c)
add_executable(ReadDir03 readdir03.c)
add_executable(ReadDir04 readdir04.c)
add_executable(GetCwd getcwd.c)
add_executable(ChangeCwd changecwd.c)
add_executable(Subdir01 subdir01.c)
add_executable(Subdir02 subdir02.c)
