cmake_minimum_required(VERSION 3.30)
project(Chapter12_HolidayDetector C)

set(CMAKE_C_STANDARD 23)

add_executable(Chapter12_HolidayDetector main.c)
add_executable(Return01 return01.c)
add_executable(Return02 return02.c)
add_executable(Return03 return03.c)
add_executable(GetDate01 getdate01.c)
add_executable(GetDate02 getdate02.c)
add_executable(GetDate03 getdate03.c)
add_executable(GetDate04 getdate04.c)
add_executable(IsHoliday01 isholiday01.c)
add_executable(IsHoliday02 isholiday02.c)
add_executable(IsHoliday03 isholiday03.c)
add_executable(IsHoliday04 isholiday04.c)
add_executable(IsHoliday05 isholiday05.c)
add_executable(IsHoliday06 isholiday06.c)
add_executable(Easter01 easter01.c)
add_executable(IsHoliday07 isholiday07.c)
