cmake_minimum_required(VERSION 3.30)
project(Chapter13_Calendar C)

set(CMAKE_C_STANDARD 23)

add_executable(Chapter13_Calendar main.c)
add_executable(Weekday01 weekday01.c)
add_executable(Weekday02 weekday02.c)
add_executable(Weekday03 weekday03.c)
add_executable(TheFirst01 thefirst01.c)
add_executable(TheFirst02 thefirst02.c)
add_executable(TheFirst03 thefirst03.c)
add_executable(LeapYear01 leapyear01.c)
add_executable(TimeZone01 timezone01.c)
add_executable(TimeZone02 timezone02.c)
add_executable(Week01 week01.c)
add_executable(Week02 week02.c)
add_executable(Week03 week03.c)
