cmake_minimum_required(VERSION 3.30)
project(Chapter14_LottoPicks C)

set(CMAKE_C_STANDARD 23)

add_executable(Chapter14_LottoPicks main.c)
add_executable(Odds01 odds01.c)
add_executable(Odds02 odds02.c)
add_executable(Odds03 odds03.c)
add_executable(Odds04 odds04.c)
add_executable(Random01 random01.c)
add_executable(Random02 random02.c)
add_executable(Random03 random03.c)
add_executable(Lotto01 lotto01.c)
